--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "habits-tab",
-  "version": "1.0.0",
-  "homepage": ".",
+  "name": "create-react-app",
+  "version": "4.0.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-scripts": "latest",
-    "typescript": "latest"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@material-ui/core": "latest",
+    "clsx": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest"
   },
   "browserslist": {
     "production": [
