--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "create-react-app",
   "version": "4.0.0",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
