--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,18 @@
 {
-  "short_name": "Habits Tab",
+  "manifest_version": 2,
   "name": "Habits Tab",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
+  "version": "1.0.0",
+  "description": "A Tab to remind you of your habits. Replaces your browser's default New Tab.",
+  "icons": {
+    "128": "img/icon128.png",
+    "48": "img/icon48.png",
+    "16": "img/icon16.png"
+  },
+  "chrome_url_overrides" : {
+    "newtab": "index.html"
+  },
+  "permissions": [
+    "storage"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "content_security_policy": "script-src 'self' 'sha256-Mm1A7BqMO1epTNcEael3g21KMJOq6Qnx31mAkRWg/w8='; object-src 'self'"
 }
